# pystring

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: docs.md  usage.md
include/: pystring.hpp
src/: pystring.cpp
tests/: main.cpp  test_pystring.cpp  test_pystring.hpp
